--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link
     rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300&family=Fira+Sans:wght@300&family=Inter:wght@300;400&family=Montserrat:wght@400;600&family=Poppins:ital,wght@0,200;0,300;1,200&family=Roboto+Serif&display=swap" rel="stylesheet">
     <title>CALCULADORA</title>
@@ -17,13 +16,15 @@
 <body>
 
 
-    <div     class="fundo"><br><br>
-        <h1>CALCULADORA</h1><br><br>
-        <button   onclick="clicar()" id="rosa" class="remo" >Rosa</button>
-        <button  onclick="clicarr()" id="Azul" >Azul</button>
-        <button   onclick="clicarrrrr()" id="roxo" class="remo" >Roxo</button>
-        <button   onclick="clicarrr()" id="vermelho" >Vermelho</button>
-        <button  onclick="clicarrrr()" id="preto" >Preto</button>
+    <div     class="fundo">
+        <h1>  CALCULADORA</h1>
+        <div class="botoes">
+            <button   onclick="clicar()" id="rosa" class="remo" >Rosa</button>
+            <button  onclick="clicarr()" id="Azul" >Azul</button>
+            <button   onclick="clicarrrrr()" id="roxo" class="remo" >Roxo</button>
+            <button   onclick="clicarrr()" id="vermelho" >Vermelho</button>
+            <button  onclick="clicarrrr()" id="preto" >Preto</button>
+        </div>
         <div  id="calculadora">
             
             <p   id="resultado" ></p>
